# mybot

./: .gitignore  .spectra.yaml  README.md  pyproject.toml
mybot/: __init__.py  __main__.py
mybot/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
mybot/agent/tools/: __init__.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
mybot/bus/: __init__.py  events.py  queue.py
mybot/cli/: __init__.py  commands.py
mybot/config/: __init__.py  loader.py  schema.py
mybot/cron/: __init__.py  service.py  types.py
mybot/heartbeat/: __init__.py  service.py
mybot/providers/: __init__.py  base.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py  registry.py
mybot/session/: __init__.py  manager.py
mybot/skills/: README.md
mybot/skills/clawhub/: SKILL.md
mybot/skills/cron/: SKILL.md
mybot/skills/github/: SKILL.md
mybot/skills/summarize/: SKILL.md
mybot/skills/tmux/: SKILL.md
mybot/skills/tmux/scripts/: find-sessions.sh
mybot/skills/weather/: SKILL.md
mybot/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
mybot/templates/memory/: MEMORY.md
mybot/utils/: __init__.py  helpers.py  process.py
openspec/changes/add-mybot-daemon/: design.md  proposal.md  tasks.md
openspec/changes/add-mybot-session/: .openspec.yaml  tasks.md
openspec/changes/trim-bus-data-model/: .openspec.yaml  proposal.md  tasks.md
openspec/changes/windows-daemon-support/: design.md  proposal.md  tasks.md
openspec/specs/agent-folder-override/: spec.md
openspec/specs/bot-management/: spec.md
openspec/specs/chat-shortcut/: spec.md
openspec/specs/daemon/: spec.md
openspec/specs/session-management/: spec.md
openspec/specs/workspace-resolution/: spec.md
tests/cli/: test_acquire_lockfile.py
tests/utils/: test_process.py
(+18 files in other folders)
